tests/it/snapshots/it__config__debug_values_retention_invalid.snap
---
source: tests/it/config.rs
expression: err
info: testdata/config/basic-retention-invalid.yml
---
load config file
├╴at {source location}
│
├─▶ parse config file in v1 format
│   ╰╴at {source location}
│
├─▶ validate parsed config file values
│   ╰╴at {source location}
│
╰─▶ retention value is too small
    ├╴at {source location}
    ├╴help: must specify at least '1'
    ├╴context: provided value: 0
    ╰╴context: validate 'retention.days'
