tests/it/snapshots/it__config__integration_git_http_basic_malformed_auth.snap
---
source: tests/it/config.rs
expression: err
info: testdata/config/basic-http-basic-malformed-auth.yml
---
load config file
├╴at {source location}
│
├─▶ parse config file in v1 format
│   ╰╴at {source location}
│
├─▶ parse config file
│   ╰╴at {source location}
│
╰─▶ integrations: unknown field `team`, expected `username` or `password` at line 11 column 3
    ╰╴at {source location}
