tests/it/snapshots/it__config__integration_git_http_basic_malformed_debugging.snap
---
source: tests/it/config.rs
expression: err
info: testdata/config/basic-http-basic-malformed-debugging.yml
---
load config file
├╴at {source location}
│
├─▶ parse config file in v1 format
│   ╰╴at {source location}
│
├─▶ parse config file
│   ╰╴at {source location}
│
╰─▶ debugging: unknown field `team`, expected `location` or `retention` at line 7 column 3
    ╰╴at {source location}
