tests/it/snapshots/it__config__integration_gitlab_group_rejects_ssh_auth.snap
---
source: tests/it/config.rs
expression: err
info: testdata/config/gitlab-group-ssh-auth.yml
---
load config file
├╴at {source location}
│
├─▶ parse config file in v1 format
│   ╰╴at {source location}
│
├─▶ validate parsed config file values
│   ╰╴at {source location}
│
╰─▶ discover repositories in GitLab group
    ├╴at {source location}
    ├╴help: gitlab_group integrations must authenticate with 'http_basic' or 'http_header', because discovery calls the GitLab API
    ╰╴context: the configured authentication method cannot be sent as an HTTP header
